# vio

./: .gitignore  README.md
lecture_1_introduction/: readme.md
lecture_1_introduction/code/: CMakeLists.txt  main.cpp
lecture_2_IMU_motion_measurement/: readme.md  summary.md
lecture_2_IMU_motion_measurement/code/vio_data_simulation/: CMakeLists.txt  README.md  build.sh
lecture_2_IMU_motion_measurement/code/vio_data_simulation/app/: gener_alldata.cpp
lecture_2_IMU_motion_measurement/code/vio_data_simulation/cmake_modules/: global_defination.cmake
lecture_2_IMU_motion_measurement/code/vio_data_simulation/src/: global_defination.h.in  imu.h  utilities.cpp  utilities.h
lecture_3_bundle_adjustment/: readme.md  summary.md
lecture_3_bundle_adjustment/code/: CMakeLists.txt  readme.md
lecture_3_bundle_adjustment/code/app/: CurveFitting.cpp
lecture_3_bundle_adjustment/code/backend/: CMakeLists.txt  backend.h  eigen_types.h  problem.cc
lecture_3_bundle_adjustment/my_code/: CMakeLists.txt
lecture_3_bundle_adjustment/my_code/app/: fit_curve.cpp
lecture_3_bundle_adjustment/my_code/include/: edge.h  least_square_solver.h  tic_toc.h  vertex.h
lecture_3_bundle_adjustment/my_code/src/: edge.cpp  least_square_solver.cpp  vertex.cpp
lecture_3_bundle_adjustment/my_code/test/: test.cpp
lecture_3_bundle_adjustment/utils/: draw_mu.py
lecture_4_sliding_window/: readme.md
lecture_4_sliding_window/code/: CMakeLists.txt  hessian_nullspace_test.cpp
lecture_5_backend_solver/: readme.md
lecture_5_backend_solver/code/: CMakeLists.txt  readme.md
lecture_5_backend_solver/code/app/: CurveFitting.cpp  TestMonoBA.cpp
lecture_5_backend_solver/code/backend/: CMakeLists.txt  edge_imu.cc  edge_imu.h  edge_prior.cpp  edge_prior.h  edge_reprojection.cc  edge_reprojection.h  eigen_types.h  imu_integration.cc  problem.cc  vertex_pose.cc  vertex_pose.h
lecture_5_backend_solver/code/cmake/: FindEigen.cmake  FindGlog.cmake
lecture_5_backend_solver/code/frontend/: CMakeLists.txt  camera.h  feature.h
lecture_6_frontend/: readme.md
lecture_6_frontend/code/: CMakeLists.txt  triangulate.cpp
lecture_7_initialization/: readme.md  summary.md
lecture_7_initialization/VINS-Course/: CMakeLists.txt  README.md
lecture_7_initialization/VINS-Course/config/: euroc_config.yaml  sim_config.yaml
lecture_7_initialization/VINS-Course/include/: System.h  estimator.h  parameters.h
lecture_7_initialization/VINS-Course/include/backend/: edge_imu.h
lecture_7_initialization/VINS-Course/include/camodocal/camera_models/: Camera.h  CameraFactory.h
lecture_7_initialization/VINS-Course/include/factor/: integration_base.h
lecture_7_initialization/VINS-Course/include/generate_sim_data/: imu.h  param.h  utilities.h
lecture_7_initialization/VINS-Course/include/initial/: initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  solve_5pts.h
lecture_7_initialization/VINS-Course/src/: System.cpp  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  feature_tracker_parameters.cpp  parameters.cpp
lecture_7_initialization/VINS-Course/src/camera_models/camera_models/: CameraFactory.cc  EquidistantCamera.cc
lecture_7_initialization/VINS-Course/src/camera_models/gpl/: gpl.cc
lecture_7_initialization/VINS-Course/src/generate_sim_data/: imu.cpp  param.cpp  param.h  utilities.cpp
lecture_7_initialization/VINS-Course/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp
lecture_7_initialization/VINS-Course/test/: run_euroc.cpp  run_sim_data.cpp
